<resources>
    <!-- General -->
    <string name="app_name">StudyMate</string>
    <string name="task_list">Lista de tareas</string>
    <string name="add_task">Añadir Tarea</string>
    <string name="task_info">Información de la tarea</string>

    <!-- Home -->
    <string name="no_task">No hay tareas próximas</string>
    <string name="complete_task">Tareas terminadas</string>

    <!-- Añadir Tarea -->
    <string name="individual">Individual</string>
    <string name="team">Equipo</string>
    <string name="title">Título</string>
    <string name="title_message">Ingrese el titulo de la tarea</string>
    <string name="subject">Materia</string>
    <string name="subject_message">Ingrese el nombre de la materia</string>
    <string name="deadline">Fecha de entrega</string>
    <string name="date_message">DD/MM/YYYY</string>
    <string name="type">Tipo</string>
    <string name="description">Descripción</string>
    <string name="desc_message">Ingrese la descripción de la tarea</string>

    <!-- Infomación Tarea -->
    <string name="complete">Terminada</string>
    <string name="incomplete">Sin terminar</string>
    <!-- Otros -->
    <string name="yes">Si</string>
    <string name="no">No</string>

    <!-- Delete Dialog -->
    <string name="delete_task">Borrar tarea</string>
    <string name="delete_message">¿Estás seguro de eliminar esta tarea? Perderás todos los datos relacionados con esta tarea.</string>
    <string name="deleting">Borrando…</string>
</resources>