<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".ui.add.AddFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-48dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="48dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp">

            <!-- Aquí se empieza a colocar el diseño -->

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvAddTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/title"
                        android:textColor="@color/grey_100"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/title_message"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddTitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            tools:text="Actividad 1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvAddSubject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/subject"
                        android:textColor="@color/grey_100"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/subject_message"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddSubject">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            tools:text="Modelación de Aplicaciones" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvAddDeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/deadline"
                        android:textColor="@color/grey_100"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etSubject" />

                    <Button
                        android:id="@+id/btnDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="@color/grey_bg"
                        android:padding="12dp"
                        android:text="@string/date_message"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddDeadline"
                        app:rippleColor="@color/grey" />

                    <TextView
                        android:id="@+id/tvAddType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/type"
                        android:textColor="@color/grey_100"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:foregroundGravity="center"
                        app:chipSpacingHorizontal="64dp"
                        app:layout_constraintEnd_toEndOf="@+id/tvAddType"
                        app:layout_constraintStart_toStartOf="@+id/tvAddType"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddType"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipIndividual"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/individual"
                            android:textColor="@color/black"
                            app:checkedIconTint="@color/black"
                            app:chipBackgroundColor="#F4BF4F"
                            app:chipCornerRadius="16dp"
                            app:chipStrokeColor="#F57C00"
                            app:chipStrokeWidth="2dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipTeam"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/team"
                            android:textColor="@color/black"
                            app:checkedIconTint="@color/black"
                            app:chipBackgroundColor="#C9F44F"
                            app:chipCornerRadius="16dp"
                            app:chipStrokeColor="#00C853"
                            app:chipStrokeWidth="2dp" />
                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/tvAddDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/description"
                        android:textColor="@color/grey_100"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/desc_message"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddDescription">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="a" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/blue"
                android:padding="12dp"
                android:text="@string/add_task"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Fin del diseño -->
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>